Add Redis session store and fix Node.js version

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
- 
+PORT=5000
+YOUTUBE_CLIENT_ID=your_client_id_here
+YOUTUBE_CLIENT_SECRET=your_client_secret_here
+YOUTUBE_REDIRECT_URI=http://localhost:5000/auth/youtube/callback
+YOUTUBE_REFRESH_TOKEN=your_refresh_token_here
+SESSION_SECRET=your_session_secret_here
+YOUTUBE_API_KEY=your_api_key_here
+REDIS_URL=redis://localhost:6379 
